# AphroditesRenderingEngineTestPrivate

./: CMakeLists.txt  README.md  compile.bat  run
AphroditesRenderingEngine/: CMakeLists.txt
AphroditesRenderingEngine/include/: BoundBuffer.hpp  BufferManager.hpp  GraphicsPipeline.hpp  LogicalDevice.hpp  Material.hpp  MemoryManager.hpp  Mesh.hpp  MeshHandle.hpp  PhysicalDevice.hpp  Presenter.hpp  QueueFamilies.hpp  RenderObject.hpp  RenderSystem.hpp  SwapChain.hpp  Texture.hpp  UniformBuffer.hpp  VulkanContext.hpp  VulkanSubsystem.hpp  Window.hpp  WindowContext.hpp
AphroditesRenderingEngine/include/Passes/: ComputePass.hpp  CopyPass.hpp  DrawObjectsPass.hpp  Pass.hpp  PassQueue.hpp
AphroditesRenderingEngine/include/Test/: OffscreenRenderer.hpp  ResourceManager.hpp  vk_engine.h  vk_initializers.h  vk_mesh.h  vk_texture.hpp  vk_types.h
AphroditesRenderingEngine/include/Vk/: Buffer.hpp  Debug.hpp  DebugUtilsMessenger.hpp  DeviceMemory.hpp  FrameBuffer.hpp  ImageView2D.hpp  Instance.hpp  ShaderModule.hpp  Surface.hpp
AphroditesRenderingEngine/include/glad/: glad.h
AphroditesRenderingEngine/src/: App.cpp  Material.cpp  MemoryManager.cpp  Mesh.cpp  Texture.cpp  WindowContext.cpp
AphroditesRenderingEngine/src/Passes/: ComputePass.cpp  CopyPass.cpp  (+3 more)
Demo/: CMakeLists.txt
Demo/ECS/: Component.hpp  MeshComponent.hpp
Demo/include/: World.hpp  WorldManager.hpp
Demo/src/: WorldManager.cpp  main.cpp
glslShaders/: edgeDetect.comp  testShader.frag  textured_lit.frag  tri_mesh_ssbo.vert
shaders/: testShader.frag.spv  textured_lit.frag.spv  tri_mesh_ssbo.vert.spv
(+10 files in other folders)
